# SUBHSSE

./: CreateModel.bat  CreateModel2017.bat  ReleasePacker.bat  ReleasePacker2017.bat  ReleasePackerALL.bat  读我.doc
DataBase/: ConstInitData.sql  DataBaseScript.sql  InitData_(OLD).sql  Sys_SetInitData.sql
DataBase/修正脚本/: SUBHSSE-20170608(现场人员资质培训信息).sql  SUBHSSEDB_V2017-04-28-001(二化建修正脚本).sql  SUBHSSEDB_V2017-04-28-001(桂林公司修正脚本).sql  SUBHSSEDB_V2017-05-12-001(二建修正项目人员信息脚本).sql  SUBHSSEDB_V2017-05-18-001六化建修正脚本.rar  SUBHSSEDB_V2017-06-06(华旭漏脚本).rar  SUBHSSEDB_V2017-07-05-001修正脚本(二化建).sql  SUBHSSEDB_V2017-07-18-001修正脚本(七化建).sql  SUBHSSEDB_V2018-03-16-001修正脚本(十一化建).sql  SUBHSSEDB_V2019-05-09-001修正脚本(岩土).sql  SUBHSSEDB_V2020-10-22-001(天辰数据修正).sql  SUBHSSEDB_V2021-01-04-001(隐患整改单数据修正).sql  SUBHSSEDB_V2021-02-22-001(岩土上报集团报表修正脚本).sql  SUBSHSSEDB_(待办事项存在未删除的流程).sql
DataBase/初始业务脚本/: 专项检查项.sql  作业票审核流程脚本.sql  基础信息初始化脚本.sql  日常巡检检查项.sql  环境危险源初始化脚本.sql
DataBase/版本日志/: SUBHSSEDB_V2021-01-04-001.sql  SUBHSSEDB_V2021-01-05-001.sql  SUBHSSEDB_V2021-01-09-001(七化建客户化脚本).sql  SUBHSSEDB_V2021-01-09-001(天辰客户脚本).sql  SUBHSSEDB_V2021-01-20-001.sql  SUBHSSEDB_V2021-01-21-001.sql  SUBHSSEDB_V2021-01-22-001(七化建整改单编号客户化脚本).sql  SUBHSSEDB_V2021-01-22-001.sql  SUBHSSEDB_V2021-01-26-001.sql  SUBHSSEDB_V2021-02-03-001.sql  SUBHSSEDB_V2021-03-01-001.sql  SUBHSSEDB_V2021-03-23-001.sql  SUBHSSEDB_V2021-03-24-001.sql  SUBHSSEDB_V2021-03-26-001.sql  SUBHSSEDB_V2021-03-27-001.sql  (+2 more)
开发需求/赛鼎/门禁-山东/DemoSource1022(3)/DemoSource/Linux/FaceRecognitioDemo/: CMakeLists.txt  main.cc
说明文件/: 企业安全大检查简单说明.docx
(+1350 files in other folders)
